--- a/aula1106/paginaLogo.html
+++ b/aula1106/paginaLogo.html
@@ -38,7 +38,98 @@
       </div>
     </div>
 
-
+    <div class="container">
+      <div class="row">
+        <div class="col-lg">
+          <div class="card-nick mx-auto">
+            <svg width="100" height="100" viewBox="0 -1 100 100" xmlns="http://www.w3.org/2000/svg">
+              <g fill="none" fill-rule="evenodd">
+                <circle cx="50" cy="50" r="49" fill="#20C4CB"></circle>
+              </g>
+              <image src="https://static.canva.com/static/images/canva_logo_100x100.png"></image>
+            </svg>
+            <small>Novo no Canva? Registre-se!</small>
+            <form class="needs-validation form-entrada" novalidate>
+              <div class="form-row">
+                <div class="col">
+                  <label for="validationCustom01">Nome:</label>
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text"><i class="fas fa-user"></i></div>
+                    </div>
+                    <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Informe seu nome" required>
+                  </div>
+                </div>
+                <div class="col">
+                  <label for="validationCustom02">Sobrenome:</label>
+                  <input type="text" class="form-control" id="validationCustom02" placeholder="Informe seu sobrenome" required>
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="col">
+                  <label for="validationCustom08">E-mail:</label>
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text">@</div>
+                    </div>
+                    <input type="email" class="form-control" id="inlineFormInputGroup" placeholder="Informe seu e-mail" required>
+                  </div>
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="col">
+                  <label for="validationCustom08">Data de nascimento:</label>
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text"><i class="fas fa-store"></i></div>
+                    </div>
+                    <input type="date" class="form-control" id="inlineFormInputGroup" placeholder="Informe seu site" required>
+                  </div>
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="col">
+                  <label for="custom-select">Sexo:</label>
+                  <div class="col-sm-10">
+                    <div class="custom-control custom-radio">
+                      <input type="radio" class="custom-control-input" id="customControlValidation" name="radio-stacked" required>
+                      <label class="custom-control-label" for="customControlValidation">
+                        Masculino
+                      </label>
+                    </div>
+                    <div class="custom-control custom-radio">
+                      <input type="radio" class="custom-control-input" id="customControlValidation2" name="radio-stacked" required>
+                      <label class="custom-control-label" for="customControlValidation2">
+                        Feminino
+                      </label>
+                    </div>
+                    <div class="custom-control custom-radio">
+                      <input type="radio" class="custom-control-input" id="customControlValidation3" name="radio-stacked" required>
+                      <label class="custom-control-label" for="customControlValidation3">
+                        Indeciso
+                      </label>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <hr>
+              <div class="form-row">
+                <div class="col">
+                  <div class="custom-control custom-checkbox mr-sm-2">
+                    <input type="checkbox" class="custom-control-input" id="customControlAutosizing" required>
+                    <label class="custom-control-label" for="customControlAutosizing">Concordo com os <a href="#">termos de uso</a> e com a <a href="#">política de privacidade</a> do Canva</label>
+                  </div>
+                </div>
+              </div>
+              <hr>
+              <div class="mt-4">
+                <button type="submit" class="btn btn-outline-light btn-lg btn-block">Enviar</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
 
