--- a/aula1106/index.html
+++ b/aula1106/index.html
@@ -6,19 +6,45 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Exemplo Bootstrap</title>
+    <title>Nicole</title>
 
     <!-- Bootstrap core CSS -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
 
 
   </head>
 
   <body>
-    <!-- Escreva seu código aqui! -->
+    <div class="navbarPagsRedeSocial">
+      <div class="pesquisaPagsRedeSocial">
+        <form class="formPagsRedeSocial">
+          <i class="logoPesquisaPagsRedeSocial">C</i>
+          <input type="text" class="inputPesquisaPagsRedeSocial">
+          <button type="button" class="buttonPesquisaPagsRedeSocial"><i class="fas fa-search"></i></button>
+        </form>
+      </div>
+      <div class="linksPagsRedeSocial">
+        <div>
+          <a href="meuPerfio.html"><small class="maisUmLinkPagsRedeSocial">Meu Perfil</small></a>
+        </div>
+        <div>
+          <a href="index.html"><small class="maisUmLinkPagsRedeSocial">Página Inicial</small></a>
+        </div>
+        <div>
+          <a href="#"></a>
+        </div>
+        <div>
+          <a href="#"></a>
+        </div>
+        <div>
+          <a href="#"></a>
+        </div>
+      </div>
+    </div>
 
-
+    
 
 
 
