--- a/aula1106/paginaLogo.html
+++ b/aula1106/paginaLogo.html
@@ -16,7 +16,7 @@
 
   </head>
 
-  <body>
+  <body style="background-image: url(images/fundo-pag-logo.jpg)">
     <div class="navbarPagLogo">
       <div class="formularioPagLogo">
         <form class="formNavPagLogo">
@@ -52,7 +52,7 @@
                   <label for="validationCustom01">Nome:</label>
                   <div class="input-group">
                     <div class="input-group-prepend">
-                      <div class="input-group-text"><i class="fas fa-user"></i></div>
+                      <div class="input-group-text"><i class="fas fa-user iFormPagLogo"></i></div>
                     </div>
                     <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Informe seu nome" required>
                   </div>
@@ -67,7 +67,7 @@
                   <label for="validationCustom08">E-mail:</label>
                   <div class="input-group">
                     <div class="input-group-prepend">
-                      <div class="input-group-text">@</div>
+                      <div class="input-group-text iFormPagLogo">@</div>
                     </div>
                     <input type="email" class="form-control" id="inlineFormInputGroup03" placeholder="Informe seu e-mail" required>
                   </div>
@@ -78,7 +78,7 @@
                   <label for="validationCustom08">Senha:</label>
                   <div class="input-group">
                     <div class="input-group-prepend">
-                      <div class="input-group-text"><i class="fas fa-lock"></i></div>
+                      <div class="input-group-text"><i class="fas fa-lock iFormPagLogo"></i></div>
                     </div>
                     <input type="password" class="form-control" id="inlineFormInputGroup04" placeholder="Informe sua senha" required>
                   </div>
@@ -89,7 +89,7 @@
                   <label for="validationCustom08">Data de nascimento:</label>
                   <div class="input-group">
                     <div class="input-group-prepend">
-                      <div class="input-group-text"><i class="fas fa-birthday-cake"></i></div>
+                      <div class="input-group-text"><i class="fas fa-birthday-cake iFormPagLogo"></i></div>
                     </div>
                     <input type="date" class="form-control" id="inlineFormInputGroup" placeholder="Informe seu site" required>
                   </div>
@@ -131,7 +131,7 @@
               </div>
               <hr>
               <div class="mt-4">
-                <button type="submit" class="btn btn-lg btn-block botaoFormPagLogo">Enviar</button>
+                <a href="index.html" class="btn btn-lg btn-block botaoFormPagLogo"><b>Enviar</b></a>
               </div>
             </form>
           </div>
