--- a/aula1106/paginaLogo.html
+++ b/aula1106/paginaLogo.html
@@ -139,21 +139,9 @@
       </div>
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <div class="footerPagLogo">
+      <a href="#" id="idiomaFooterPagLogo">Português (Brasil)</a>
+    </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
