--- a/aula1106/paginaLogo.html
+++ b/aula1106/paginaLogo.html
@@ -83,6 +83,12 @@
                     <input type="password" class="form-control" id="inlineFormInputGroup04" placeholder="Informe sua senha" required>
                   </div>
                 </div>
+                <div class="col">
+                  <label for="validationCustom08">Corfirmação de Senha:</label>
+                  <div class="input-group">
+                    <input type="password" class="form-control" id="inlineFormInputGroup04" placeholder="Confirme sua senha" required>
+                  </div>
+                </div>
               </div>
               <div class="form-row">
                 <div class="col">
