--- a/aula1106/meuPerfio.html
+++ b/aula1106/meuPerfio.html
@@ -13,10 +13,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
 
-
   </head>
 
-  <body style="background-color: #fafafa;">
+  <body style="background-color: #e6ecf0;">
     <div class="navbarPagsRedeSocial">
       <div class="logoPagsRedeSocial">
         <i>C</i>
@@ -49,10 +48,39 @@
     <div class="detalheNavbarPagsRedeSocial">
     </div>
 
+    <div class="conjunto-perfil">
+      <div class="div-foto-capa">
+        <img src="images/img-capa.jpg" alt="Foto da capa" class="foto-capa">
+      </div>
+      <div class="div-foto-perfil">
+        <img src="images/img-perfil.jpg" alt="Foto de perfil" class="foto-perfil">
+      </div>
+    </div>
+
+    <div class="navbarPerfil">
+      <div class="conjuntoLinksNavPerfil">
+        <div class="divLinkNavbarPerfil">
+          <a href="#"><small class="maisUmLinkNavbarPerfil">Seguindo</small></a>
+        </div>
+        <div class="divLinkNavbarPerfil">
+          <a href="#"><small class="maisUmLinkNavbarPerfil">Seguidores</small></a>
+        </div>
+        <div class="divLinkNavbarPerfil">
+          <a href="#"><small class="maisUmLinkNavbarPerfil">Sobre</small></a>
+        </div>
+        <div class="divLinkNavbarPerfil">
+          <a href="#"><small class="maisUmLinkNavbarPerfil">Momentos</small></a>
+        </div>
+        <div class="divLinkNavbarPerfil">
+          <a href="#"><small class="maisUmLinkNavbarPerfil">Fotos</small></a>
+        </div>
+      </div>
+    </div>
+
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <div class="postar">
+          <div class="postar-perfil">
             <div class="pessoa-postar">
               <img src="images/img-perfil.jpg" alt="Nicole" class="img-person-postar">
               <input type="text" placeholder="Compartilhe seus acontecimentos!" class="escrever-poste">
