--- a/aula1106/meuPerfio.html
+++ b/aula1106/meuPerfio.html
@@ -41,7 +41,7 @@
           <a href="amigos.html"><small class="maisUmLinkPagsRedeSocial">Meus Amigos</small></a>
         </div>
         <div class="divLinkPagsRedeSocial">
-          <a href="#"></a>
+          <a href="mensagens.html"><small class="maisUmLinkPagsRedeSocial">Mensagens</small></a>
         </div>
       </div>
     </div>
