--- a/aula1106/amigos.html
+++ b/aula1106/amigos.html
@@ -54,7 +54,7 @@
         <div class="col-lg-4">
           <div class="card-amigos">
             <div class="titulo-card-amigos">
-              <small class="descricao-amigos"><b>Amigo 1</b></small>
+              <a href="#"><small class="descricao-amigos"><b>Pessoa1</b></small></a>
             </div>
             <div class="img-card-amigos">
               <img src="images/img-test-fotos.jpg" class="img-amigos">
@@ -64,7 +64,7 @@
         <div class="col-lg-4">
           <div class="card-amigos">
             <div class="titulo-card-amigos">
-              <small class="descricao-amigos"><b>Amigo 2</b></small>
+              <a href="#"><small class="descricao-amigos"><b>Pessoa2</b></small></a>
             </div>
             <div class="img-card-amigos">
               <img src="images/img-test-fotos.jpg" class="img-amigos">
@@ -74,40 +74,7 @@
         <div class="col-lg-4">
           <div class="card-amigos">
             <div class="titulo-card-amigos">
-              <small class="descricao-amigos"><b>Amigo 3</b></small>
-            </div>
-            <div class="img-card-amigos">
-              <img src="images/img-test-fotos.jpg" class="img-amigos">
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="card-amigos">
-            <div class="titulo-card-amigos">
-              <small class="descricao-amigos"><b>Amigo 4</b></small>
-            </div>
-            <div class="img-card-amigos">
-              <img src="images/img-test-fotos.jpg" class="img-amigos">
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="card-amigos">
-            <div class="titulo-card-amigos">
-              <small class="descricao-amigos"><b>Amigo 5</b></small>
-            </div>
-            <div class="img-card-amigos">
-              <img src="images/img-test-fotos.jpg" class="img-amigos">
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="card-amigos">
-            <div class="titulo-card-amigos">
-              <small class="descricao-amigos"><b>Amigo 6</b></small>
+              <a href="#"><small class="descricao-amigos"><b>Pessoa3</b></small></a>
             </div>
             <div class="img-card-amigos">
               <img src="images/img-test-fotos.jpg" class="img-amigos">
@@ -120,7 +87,7 @@
         <div class="col-lg-4">
           <div class="card-amigos">
             <div class="titulo-card-amigos">
-              <small class="descricao-amigos"><b>Amigo 7</b></small>
+              <a href="#"><small class="descricao-amigos"><b>Pessoa4</b></small></a>
             </div>
             <div class="img-card-amigos">
               <img src="images/img-test-fotos.jpg" class="img-amigos">
@@ -130,7 +97,7 @@
         <div class="col-lg-4">
           <div class="card-amigos">
             <div class="titulo-card-amigos">
-              <small class="descricao-amigos"><b>Amigo 8</b></small>
+              <a href="#"><small class="descricao-amigos"><b>Pessoa5</b></small></a>
             </div>
             <div class="img-card-amigos">
               <img src="images/img-test-fotos.jpg" class="img-amigos">
@@ -140,40 +107,7 @@
         <div class="col-lg-4">
           <div class="card-amigos">
             <div class="titulo-card-amigos">
-              <small class="descricao-amigos"><b>Amigo 9</b></small>
-            </div>
-            <div class="img-card-amigos">
-              <img src="images/img-test-fotos.jpg" class="img-amigos">
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="card-amigos">
-            <div class="titulo-card-amigos">
-              <small class="descricao-amigos"><b>Amigo 10</b></small>
-            </div>
-            <div class="img-card-amigos">
-              <img src="images/img-test-fotos.jpg" class="img-amigos">
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="card-amigos">
-            <div class="titulo-card-amigos">
-              <small class="descricao-amigos"><b>Amigo 11</b></small>
-            </div>
-            <div class="img-card-amigos">
-              <img src="images/img-test-fotos.jpg" class="img-amigos">
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="card-amigos">
-            <div class="titulo-card-amigos">
-              <small class="descricao-amigos"><b>Amigo 12</b></small>
+              <a href="#"><small class="descricao-amigos"><b>Pessoa6</b></small></a>
             </div>
             <div class="img-card-amigos">
               <img src="images/img-test-fotos.jpg" class="img-amigos">
@@ -186,7 +120,7 @@
         <div class="col-lg-4">
           <div class="card-amigos">
             <div class="titulo-card-amigos">
-              <small class="descricao-amigos"><b>Amigo 13</b></small>
+              <a href="#"><small class="descricao-amigos"><b>Pessoa7</b></small></a>
             </div>
             <div class="img-card-amigos">
               <img src="images/img-test-fotos.jpg" class="img-amigos">
@@ -196,7 +130,7 @@
         <div class="col-lg-4">
           <div class="card-amigos">
             <div class="titulo-card-amigos">
-              <small class="descricao-amigos"><b>Amigo 14</b></small>
+              <a href="#"><small class="descricao-amigos"><b>Pessoa8</b></small></a>
             </div>
             <div class="img-card-amigos">
               <img src="images/img-test-fotos.jpg" class="img-amigos">
@@ -206,7 +140,73 @@
         <div class="col-lg-4">
           <div class="card-amigos">
             <div class="titulo-card-amigos">
-              <small class="descricao-amigos"><b>Amigo 15</b></small>
+              <a href="#"><small class="descricao-amigos"><b>Pessoa9</b></small></a>
+            </div>
+            <div class="img-card-amigos">
+              <img src="images/img-test-fotos.jpg" class="img-amigos">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="card-amigos">
+            <div class="titulo-card-amigos">
+              <a href="#"><small class="descricao-amigos"><b>Pessoa10</b></small></a>
+            </div>
+            <div class="img-card-amigos">
+              <img src="images/img-test-fotos.jpg" class="img-amigos">
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="card-amigos">
+            <div class="titulo-card-amigos">
+              <a href="#"><small class="descricao-amigos"><b>Pessoa11</b></small></a>
+            </div>
+            <div class="img-card-amigos">
+              <img src="images/img-test-fotos.jpg" class="img-amigos">
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="card-amigos">
+            <div class="titulo-card-amigos">
+              <a href="#"><small class="descricao-amigos"><b>Pessoa12</b></small></a>
+            </div>
+            <div class="img-card-amigos">
+              <img src="images/img-test-fotos.jpg" class="img-amigos">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="card-amigos">
+            <div class="titulo-card-amigos">
+              <a href="#"><small class="descricao-amigos"><b>Pessoa13</b></small></a>
+            </div>
+            <div class="img-card-amigos">
+              <img src="images/img-test-fotos.jpg" class="img-amigos">
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="card-amigos">
+            <div class="titulo-card-amigos">
+              <a href="#"><small class="descricao-amigos"><b>Pessoa14</b></small></a>
+            </div>
+            <div class="img-card-amigos">
+              <img src="images/img-test-fotos.jpg" class="img-amigos">
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="card-amigos">
+            <div class="titulo-card-amigos">
+              <a href="#"><small class="descricao-amigos"><b>Pessoa15</b></small></a>
             </div>
             <div class="img-card-amigos">
               <img src="images/img-test-fotos.jpg" class="img-amigos">
