--- a/aula1106/mensagens.html
+++ b/aula1106/mensagens.html
@@ -16,7 +16,7 @@
 
   </head>
 
-  <body>
+  <body style="background-color: #e9ebee;">
     <div class="navbarPagsRedeSocial">
       <div class="logoPagsRedeSocial">
         <i>C</i>
@@ -51,44 +51,104 @@
 
     <div class="container">
       <div class="row">
-        <div class="conteudo">
-          <div class="col-lg-5">
-            <div class="colunas-bate-papo">
-              <div class="bate-papo-amigos">
-                <small>Amigo1</small>
-              </div>
-              <div class="bate-papo-amigos">
-                <small>Amigo2</small>
-              </div>
-              <div class="bate-papo-amigos">
-                <small>Amigo3</small>
-              </div>
-              <div class="bate-papo-amigos">
-                <small>Amigo4</small>
-              </div>
-              <div class="bate-papo-amigos">
-                <small>Amigo5</small>
-              </div>
-              <div class="bate-papo-amigos">
-                <small>Amigo6</small>
-              </div>
-              <div class="bate-papo-amigos">
-                <small>Amigo7</small>
-              </div>
-              <div class="bate-papo-amigos">
-                <small>Amigo8</small>
-              </div>
-              <div class="bate-papo-amigos">
-                <small>Amigo9</small>
-              </div>
-              <div class="bate-papo-amigos">
-                <small>Amigo10</small>
+        <div class="col-lg-12 text-center ajuste">
+          <h1>Bate-Papo</h1>
+        </div>
+      </div>
+      <div class="bate-papo">
+        <div class="row">
+          <div class="col-lg-12">
+            <img src="images/messenger-person1.png" class="image">
+
+            <div class="divConversa">
+              <a href="#"><small class="pessoa"><b>Pessoa1</b></small></a>
+              <i class="fas fa-circle"></i>
+              <div class="divConversacao">
+                <i class="fas fa-check"></i>
+                <small class="conversa">Blá blá blá</small>
               </div>
             </div>
+
+            <div class="divRight">
+              <small class="hora">Online agora</small>
+              <small class="ativo-desativo"><i class="far fa-circle"></i></small>
+            </div>
           </div>
-          <div class="col-lg-7">
-            <div class="bate-papo-mensagens">
-              
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-lg-12">
+            <img src="images/messenger-person2.png" class="image">
+
+            <div class="divConversa">
+              <a href="#"><small class="pessoa"><b>Pessoa2</b></small></a>
+              <div class="divConversacao">
+                <i class="fas fa-check"></i>
+                <small class="conversa">Blá blá blá</small>
+              </div>
+            </div>
+
+            <div class="divRight">
+              <small class="hora">17:00</small>
+              <small class="ativo-desativo"><i class="far fa-circle"></i></small>
+            </div>
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-lg-12">
+            <img src="images/messenger-person3.png" class="image">
+
+            <div class="divConversa">
+              <a href="#"><small class="pessoa"><b>Pessoa3</b></small></a>
+              <div class="divConversacao">
+                <i class="fas fa-check"></i>
+                <small class="conversa">Blá blá blá</small>
+              </div>
+            </div>
+
+            <div class="divRight">
+              <small class="hora">15:20</small>
+              <small class="ativo-desativo"><i class="far fa-circle"></i></small>
+            </div>
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-lg-12">
+            <img src="images/messenger-person4.jpg" class="image">
+
+            <div class="divConversa">
+              <a href="#"><small class="pessoa"><b>Pessoa4</b></small></a>
+              <i class="fas fa-circle"></i>
+              <div class="divConversacao">
+                <i class="fas fa-check"></i>
+                <small class="conversa">Blá blá blá</small>
+              </div>
+            </div>
+
+            <div class="divRight">
+              <small class="hora">Online agora</small>
+              <small class="ativo-desativo"><i class="far fa-circle"></i></small>
+            </div>
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-lg-12">
+            <img src="images/messenger-person5.png" class="image">
+
+            <div class="divConversa">
+              <a href="#"><small class="pessoa"><b>Pessoa5</b></small></a>
+              <div class="divConversacao">
+                <i class="fas fa-check"></i>
+                <small class="conversa">Blá blá blá</small>
+              </div>
+            </div>
+
+            <div class="divRight">
+              <small class="hora">19:30</small>
+              <small class="ativo-desativo"><i class="far fa-circle"></i></small>
             </div>
           </div>
         </div>
