--- a/aula1106/paginaLogo.html
+++ b/aula1106/paginaLogo.html
@@ -43,9 +43,9 @@
         <div class="col-lg">
           <div class="card-nick mx-auto">
             <div class="circulo">
-                <small>Canva</small>
+                <small>Diamond</small>
             </div>
-            <h2 id="titleCard">Novo no Canva? Registre-se!</h2>
+            <h2 id="titleCard">Novo no Diamond? Registre-se!</h2>
             <form class="needs-validation form-entrada" novalidate>
               <div class="form-row">
                 <div class="col">
